Fix for bug 106585 - crash in XPCOMM.DLL during shutdown when mail-news window was open, r=shaver, sr=dougt